tests/fixtures/invalid/reversed_float.py
# Cannot call reversed() with Float
x = reversed(1.0)
